# faculty-list

./: LICENSE  README.md  faculty-list.py  pyproject.toml
