[project]
name = "faculty-list"
version = "0.1.0"
description = "A utility that creates a CSV inventory of Fred Hutchinson faculty by scraping their profile/lab webpages and extracting structured data using a Large Language Model (LLM)."
authors = ["Robert McDermott <robert.c.mcdermott@gmail.com>"]
readme = "README.md"
license = "Apache 2.0"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.5",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
]
